--- a/src/style/styleGlobal.less
+++ b/src/style/styleGlobal.less
@@ -11,7 +11,9 @@
 .d-inline-block {
     display: inline-block !important;
 }
-
+.d-flex {
+    display: flex !important;
+}
 // Center Anything Vertically
 .vertical-center {
     margin: 0 !important;
@@ -45,3 +47,27 @@ blockquote {
     padding: 3px;
     font-size: 85%;
 }
+
+.ant-menu {
+    font-weight: bold;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
