--- a/src/style/styleText.less
+++ b/src/style/styleText.less
@@ -1,4 +1,4 @@
-@font-style: 900, 700, 500, 400, 300, 100, italic;
+@font-style: 900, 700, 500, 400, 300, 100, italic , bold;
 @align: left, center, right;
 @transformed: lowercase, uppercase, capitalize;
 
